# flask-paris-orm

./: .gitignore  README.md  app.py  conftest.py  docker-compose.yaml  load_fixture.py  pyproject.toml
config/: base.py  dev.py  local.py  remote.py  settings.py  testing.py
instance/: local.db  test.db
middlewares/: authmiddleware.py
migrations/versions/: 4211a3654bf5_alter_caritem_with_created_at_and_.py  60c67808c045_change_column_name.py  7d5c86857b31_create_caritem_model_init.py  86555649f189_create_user_model.py  a5845cdb5e6e_alter_user_is_staff.py  c92b8ae09e03_create_carrent.py
models/: __init__.py  car.py  users.py
models/fixtures/: car_fixture.py  user_fixtures.py
repo/: car.py  rent.py  user.py
route/: car.py  index.py  rent.py  user.py
shared/: chrono.py
tests/: test_app.py  test_query.py  test_user.py
