[project]
name = "real-world-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.2.0",
    "faker>=37.0.2",
    "faker-vehicle>=0.2.0",
    "flask>=3.1.0",
    "flask-jwt-extended>=4.7.1",
    "flask-login>=0.6.3",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.6",
    "pytest>=8.3.5",
    "sqlalchemy-utils>=0.41.2",
]
